# CinC

./: '  .gitignore  CMakeLists.txt  Makefile  README.md  a  a.s  build.sh  temp.i
src/: arena.c  arena.h  asm.c  asm.h  ast.c  ast.h  cinc.h  codegen.c  codegen.h  common.h  debug.c  debug.h  ir.c  ir.h  lexer.c  lexer.h  main.c  memory.h  parser.c  parser.h  sema.c  sema.h  symbol.h  type.c  type.h  x86.c  x86.h
src/base/: arena.c  arena.h  hash_map.c  hash_map.h
tests/: test_runner.sh
tests/chapter10/: 1.push_arg_on_page_boundary.c  3.extern_block_scope_variable.c  7.type_before_storage_class.c  fail.local_var_follows_extern.c
tests/chapter3/: 0.bitwise_shift_precedence.c  21.bitwise_precedence.c
tests/chapter4/: 0.and_false.c  0.multi_short_circuit.c  0.operate_on_booleans.c  0.precedence_3.c  1.and_true.c  1.associativity.c  1.eq_precedence.c  1.or_short_circuit.c  1.precedence.c  1.precedence_5.c  3.or_true.c
tests/chapter5/: 0.short_circuit_and_fail.c  0.unused_exp.c  1.assignment_lowest_precedence.c  1.non_short_circuit_or.c  1.short_circuit_or.c  9.bitwise_ops_vars.c
tests/chapter6/: 0.goto_label_main.c  0.unused_label.c  1.goto_label_main_2.c  1.rh_assignment.c  1.ternary_rh_binop.c  1.whitespace_after_label.c  3.if_nested_3.c  4.if_nested_4.c  5.goto_backwards.c  5.goto_nested_label.c  TODO.label_without_statement.c  fail.undeclared_var_in_labeled_statement.c
tests/chapter7/: 0.goto_before_declaration.c  1.declaration_only.c  1.goto_inner_scope.c  1.hidden_variable.c  28.similar_var_names.c  4.assign_to_self.c  4.inner_uninitialized.c  (+1 more)
(+11 files in other folders)
